# nokori

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  config.toml.example  ocr-full-repo-cr-round1.md  pyproject.toml
.archlet/: data.js
.archlet/diffs/: commit-e8118e82.js  manifest.js
.github/: PUBLISHING.md
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  test.yml
docs/: design-decisions.md  product-spec.md  technical-design.md
docs/adr/: 0001-hot-cache-mtime-heuristic.md  0002-cross-project-promotion-default-on.md  0003-merge-neighbor-backfill.md  0004-v6-lifecycle-flywheel.md  0005-bm25-in-process-lru.md  0006-embedding-local-single-vector.md  0007-gate-inject-wide-block-narrow.md  0008-candidate-cleanup-calendar-days.md  0009-hooks-fail-open.md  0010-gate-single-round-per-prompt.md  0011-embed-server-no-auth.md  0012-extract-single-instance-lock.md  0013-project-id-git-rev-parse.md  0014-archived-replacement-orphan-check.md  0015-gate-marker-per-prompt-hash.md  0016-web-ui-architecture.md  0017-shadow-formal-single-pass-retrieval.md  0018-concept-matching-fallback-strategy.md  0019-claude-fork-extraction.md
docs/en/: architecture.md  cli.md  configuration.md  extraction.md  gate.md  installation.md  lifecycle.md  retrieval.md  web-ui.md
docs/ja/: architecture.md  cli.md  configuration.md  extraction.md  gate.md  installation.md  lifecycle.md  retrieval.md  web-ui.md
docs/superpowers/plans/: 2026-06-07-part6-frontend-timeline.md  2026-06-07-part7-frontend-dashboard.md  2026-06-07-parts-2-5-implementation-notes.md
docs/zh-CN/: architecture.md  cli.md  configuration.md  extraction.md  gate.md  installation.md  lifecycle.md  retrieval.md  web-ui.md
docs/zh-TW/: architecture.md  cli.md  configuration.md  extraction.md  gate.md  installation.md  lifecycle.md  retrieval.md  web-ui.md
nokori/: __init__.py  __main__.py  _packaging.py  _stub_helper.py  cli.py  config.py  config_editor.py  config_file.py  config_schema.py  constants.py  db.py  errors.py  install_targets.py  models.py  policy.py  prefetch.py  schema_types.py
nokori/archive/: fingerprints.py
nokori/cold/: _constants.py  _llm_call.py  _result.py  integrate.py  jobs.py  pipeline.py  qualify.py  roles.py  stages.py  verify.py
nokori/commands/: add.py  dismiss.py  edit.py  embed_cmd.py  export_import.py  extract.py  health.py  install.py  list_rules.py  logs.py  maintain.py  report.py  reset.py  search_debug.py  show.py  status.py  stream.py  test.py
nokori/db/: __init__.py  connection.py  queries.py  schema.py
nokori/eval/: benchmark_profiles.py  embedding_benchmark_cases.json  synthetic.py
nokori/events/: fire.py  observability.py  shadow.py
nokori/extract/: checkpoint.py  compressor.py  extractor.py  fork.py  fork_runner.py  jobs.py  lock.py  merger.py  process.py  reader.py  term_normalize.py
nokori/gate/: blocker.py  engine.py  marker.py  prompt_ack.py  state.py
nokori/hooks/: __init__.py  coalesce.py  context.py  cursor_deferred.py  pre_tool_use.py  prompt_inject.py  session_end.py  session_start.py  user_prompt_submit.py
nokori/lifecycle/: deferred.py  evidence.py  hot_cache.py  maintenance.py  promotion.py  transcript_index.py  transition_apply.py  transition_barriers.py  transition_batch.py  transition_evaluate.py  transition_gather.py  transition_types.py  transitions.py
nokori/llm/: adapter.py  json_payload.py  prompts.py
nokori/matcher/: compiler.py  runtime.py
nokori/merge/: policy.py
nokori/posthoc/: __init__.py  evaluator.py  jobs.py  windowing.py
nokori/runtime/: applicability.py  selection.py
nokori/search/: applicability.py  bm25.py  embed_ipc.py  embedding.py  embedding_profiles.py  embedding_server.py  engine.py  evidence.py  idf_stats.py  ranker.py  retrieve.py  scorer.py  selector.py  tokenizer.py
nokori/utils/: atomic_json.py  file_lock.py  fs.py  hook_diag.py  hook_response.py  host.py  ids.py  logging.py  project.py  prompt_text.py  sessions.py  sql_batch.py  text.py  time.py  transcript.py  url_safe.py
nokori/web/: __init__.py  app.py  deps.py  models.py
nokori/web/api/: config_api.py  dashboard.py  embed.py  extract.py  health.py  injections.py  lifecycle.py  logs.py  monitor.py  retrieve.py  rules.py  timeline.py
nokori/web/static/: index.html
plans/: README.md
scripts/: check_mypy_ratchet.py  close_issues_batch.sh  close_issues_resume.sh  coverage.sh  eval_extract_prompts.py  verify.py
tests/: conftest.py  test_add.py  test_archive_fingerprints.py  test_autonomous_flywheel_wiring.py  test_autonomous_schema.py  test_backlog_fixes.py  test_blocker.py  test_bug_audit_fixes.py  test_cli.py  test_cli_commands.py  test_cli_report_stream.py  test_cold_eval_spawn.py  test_cold_pipeline.py  test_config.py  test_config_editor.py  test_config_schema_coherence.py  test_cr_round.py  test_cross_project_promotion.py  test_cursor_compat.py  test_db.py  test_db_schema.py  test_dismiss.py  test_dismiss_cli.py  test_dynamic_idf.py  test_embed_ipc.py  test_embed_prefetch.py  test_embedding.py  test_embedding_profiles.py  test_evidence_utility.py  test_export_import.py  test_extract.py  test_extract_checkpoint.py  test_extract_project.py  test_extract_retry.py  test_extract_state_api.py  test_file_lock.py  test_fire_counts_shared.py  test_fire_shadow_events.py  test_fork_extract.py  test_gate_engine.py  (+75 more)
web/: DESIGN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: Alert.tsx  AnimatedNumber.tsx  ConfigField.tsx  ConfigSaveBar.tsx  ConfigSectionCard.tsx  ConfigSectionNav.tsx  ConfigToolbar.tsx  ConfirmDialog.tsx  EmbedControl.tsx  EmptyState.tsx  ErrorBoundary.tsx  ExclusiveVariantPanel.tsx  FilterPill.tsx  GlassCard.tsx  HelpTooltip.tsx  Layout.tsx  LocaleSwitcher.tsx  MeshBackground.tsx  PageSkeleton.tsx  StatusBadge.tsx  StatusDot.tsx  ThemeSwitcher.tsx  TimelineEvent.tsx  TimelineGroup.tsx
web/src/hooks/: useApi.ts  useHotkey.ts  useLocale.ts  usePolling.test.ts  (+2 more)
(+746 files in other folders)
