[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nokori"
version = "0.5.33"
description = "Local rule memory for Claude Code and Cursor—corrections distilled into lasting guidance, recalled in context, one deliberate gate when stakes are high. 经验留下的痕迹，比记忆更深。"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "KorenKrita"}]
keywords = [
    "claude-code",
    "cursor",
    "cursor-ide",
    "hooks",
    "gate",
    "rules",
    "bm25",
    "embeddings",
    "sqlite",
    "python",
    "learning",
    "coding-agent",
    "ai-coding",
    "memory",
    "agent-hooks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["fastapi>=0.104", "pydantic>=2.0", "uvicorn[standard]>=0.24", "websockets>=12.0", "json-repair>=0.30"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist>=3.0", "httpx>=0.27", "setuptools>=68.0", "ruff>=0.8", "mypy>=1.13", "pre-commit>=3.0"]
# >=3.0 required: Granite uses encode_query / encode_document (ST 2.x lacks these).
local-embed = ["sentence-transformers>=3.0"]
web = ["fastapi>=0.104", "uvicorn[standard]>=0.24", "websockets>=12.0"]

[project.urls]
Homepage = "https://github.com/KorenKrita/nokori"
Repository = "https://github.com/KorenKrita/nokori"

[project.scripts]
nokori = "nokori.__main__:main"

[tool.setuptools.packages.find]
include = ["nokori*"]

[tool.setuptools.package-data]
nokori = ["web/static/**/*"]

[tool.setuptools.cmdclass]
install = "nokori._packaging.InstallWithPrefetch"
develop = "nokori._packaging.DevelopWithPrefetch"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["nokori"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "json_repair.*", "setuptools.*"]
ignore_missing_imports = true

# ponytail: gradual mypy — transition phase. Most modules use sqlite3.Row (returns Any)
# which causes arg-type/assignment/attr-defined cascades. Strict checking active on:
# nokori.db, nokori.models, nokori.policy, nokori.config_schema, nokori.eval.*, nokori.matcher.*
# Shrink this list as Task db-query-seam lands typed query returns.
[[tool.mypy.overrides]]
module = [
    "nokori.runtime.*",
    "nokori.gate.*",
    "nokori.cold.*",
    "nokori.web.*",
    "nokori.search.*",
    "nokori.hooks.*",
    "nokori.llm.*",
    "nokori.events.*",
    "nokori.lifecycle.*",
    "nokori.posthoc.*",
    "nokori.extract.*",
    "nokori.commands.*",
    "nokori.archive.*",
    "nokori.merge.*",
    "nokori.config",
    "nokori.config_editor",
    "nokori.utils.*",
]
disallow_untyped_defs = false
warn_return_any = false
disable_error_code = ["arg-type", "assignment", "var-annotated", "union-attr", "attr-defined", "exit-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q -n auto"
