[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nokori"
version = "0.5.54"
description = "Local rule memory for Claude Code, Cursor, Pi, and OMP—corrections distilled into lasting guidance, recalled in context, one deliberate gate when stakes are high. 经验留下的痕迹，比记忆更深。"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "KorenKrita"}]
keywords = [
    "claude-code",
    "cursor",
    "cursor-ide",
    "pi-coding-agent",
    "pi",
    "oh-my-pi",
    "omp",
    "hooks",
    "gate",
    "rules",
    "bm25",
    "embeddings",
    "sqlite",
    "python",
    "learning",
    "coding-agent",
    "ai-coding",
    "memory",
    "agent-hooks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["fastapi>=0.136,<1.0", "pydantic>=2.13,<3", "uvicorn[standard]>=0.49,<1.0", "websockets>=12,<17", "json-repair>=0.30,<1"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist>=3.0", "httpx2>=2,<3", "setuptools>=68.0", "ruff>=0.8", "mypy>=1.13", "pre-commit>=3.0"]
# >=3.0 required: Granite uses encode_query / encode_document (ST 2.x lacks these).
local-embed = ["sentence-transformers>=3.0,<4"]

[project.urls]
Homepage = "https://github.com/KorenKrita/nokori"
Repository = "https://github.com/KorenKrita/nokori"

[project.scripts]
nokori = "nokori.__main__:main"

[tool.setuptools.packages.find]
include = ["nokori*"]

[tool.setuptools.package-data]
nokori = ["web/static/**/*"]

[tool.setuptools.cmdclass]
install = "nokori._packaging.InstallWithPrefetch"
develop = "nokori._packaging.DevelopWithPrefetch"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "PERF", "C901"]
ignore = ["E501", "SIM115"]

[tool.ruff.lint.mccabe]
# Ratchet: tighten over time; offenders above this use per-file ignores below.
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
# Complexity >20: defer safe extractions; do not mass-refactor in this pass.
"nokori/cold/roles.py" = ["C901"]  # _normalize_role_output (~55)
"nokori/merge/policy.py" = ["C901"]  # find_merge_neighbors (~33)
"nokori/search/selector.py" = ["C901"]  # select_injection (~24)
"nokori/search/applicability.py" = ["C901"]  # evaluate_applicability (~24)
"nokori/commands/show.py" = ["C901"]  # run (~24)
"nokori/cli.py" = ["C901"]  # _dispatch (~22)
"nokori/commands/edit.py" = ["C901"]  # run (~22)
"nokori/commands/install.py" = ["C901"]  # run (~22)
"nokori/commands/extract.py" = ["C901"]  # run (~21)
"nokori/matcher/runtime.py" = ["C901"]  # evaluate_match (~22)
"nokori/posthoc/jobs.py" = ["C901"]  # _compute_window_from_transcript (~22)
"nokori/web/api/logs.py" = ["C901"]  # logs_ws (~22)
"nokori/config_editor.py" = ["C901"]  # write_document (~21)

[tool.ruff.lint.isort]
known-first-party = ["nokori"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "json_repair.*", "setuptools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q -n auto"
